--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,10 +4,11 @@ version: 1.0.0
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.18.5 <3.0.0'
+  sdk: '>=2.19.0-0.0.0.dev <3.0.0'
 
 dependencies:
   collection: any
+  more: any
 
 dev_dependencies:
   lints: ^2.0.0
