--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -19,10 +19,10 @@ include: package:lints/recommended.yaml
 #   rules:
 #     - camel_case_types
 
-analyzer:
-  enable-experiment:
-    - records
-    - patterns
+#analyzer:
+#  enable-experiment:
+#    - records
+#    - patterns
 #   exclude:
 #     - path/to/excluded/files/**
 
