--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,12 +4,12 @@ version: 1.0.0
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.18.0 <3.0.0'
+  sdk: '>=3.0.0-0.0.0.dev <4.0.0'
 
 dependencies:
-  collection: any
-  more: any
+  collection: ^1.17.0
+  meta: ^1.8.0
+  more: ^3.9.2
 
 dev_dependencies:
-  lints: ^2.0.0
-  test: ^1.16.0
+  test: ^1.22.0
