--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,15 @@
-name: adventofcode2022
+name: adventofcode
 description: A sample command-line application.
 version: 1.0.0
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=3.0.0-0.0.0.dev <4.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   collection: ^1.17.0
   meta: ^1.8.0
-  more: ^3.9.2
+  more: ^4.0.0
 
 dev_dependencies:
   test: ^1.22.0
