--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: adventofcode
-description: A sample command-line application.
+description: solutions for advent of code
 version: 1.0.0
-# homepage: https://www.example.com
+publish_to: none
 
 environment:
   sdk: '>=3.7.0-0 <4.0.0'
