--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 1.0.0
 publish_to: none
 
 environment:
-  sdk: '>=3.7.0-0 <4.0.0'
+  sdk: ^3.11.0-0
 
 dependencies:
   collection: ^1.17.0
